# irmin-web

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  dune-project  irmin-dashboard.opam  irmin-web-mirage.opam  irmin-web-unix.opam  irmin-web.opam
dashboard/: dune  irmin_dashboard.ml
dashboard/static/: index.html
dashboard/static/css/: index.css
dashboard/static/js/: index.js
js/: irmin.js
mirage/: dune
src/: .merlin  cli.ml  dune  irmin_web.ml  irmin_web.mli  realpath.c  web.ml
test/: .merlin  dune  test.css  test.html  test.js  test.ml
unix/: cli.ml  dune  irmin_web_unix.ml  irmin_web_unix.mli  web.ml
