opam-version: "1.2"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: ["Zach Shipko <zachshipko@gmail.com>"]
homepage: "https://github.com/zshipko/irmin-web"
doc: "https://zshipko.github.io/irmin-web/doc"
license: "ISC"
dev-repo: "https://github.com/zshipko/irmin-web.git"
bug-reports: "https://github.com/zshipko/irmin-web/issues"
tags: []

available: [ ocaml-version >= "4.03.0"]

depends:
[
    "dune" {build}
    "cohttp-lwt"
    "irmin-unix"
    "irmin-graphql"
    "ppx_blob"
    "ezjsonm"
    "tyxml"
    "tyxml-ppx"
]

depopts: []

build:
[
    ["dune" "clean"]
    ["dune" "build" "-p" name]
]

build-test:
[
    ["dune" "runtest" "-p" name]
]
